--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "chores-bot",
+  "scripts": {
+    "dev": "yarn tsc && export DEBUG=\"grammy*\" && node src/main.js"
+  },
   "version": "1.0.0",
   "dependencies": {
+    "@google-cloud/local-auth": "2.1.0",
     "dotenv": "^16.3.1",
+    "googleapis": "^126.0.1",
+    "grammy": "^1.19.0",
+    "node-cron": "^3.0.2",
+    "process": "^0.11.10",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.0",
+    "@types/node-cron": "^3.0.9"
   }
 }
