--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "chores-bot",
   "scripts": {
-    "dev": "yarn tsc && export DEBUG=\"grammy*\" && node src/main.js"
+    "dev": "yarn tsc && export DEBUG=\"grammy*\" && node src/main.js",
+    "start": "node src/main.js"
   },
   "version": "1.0.0",
   "dependencies": {
