--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "node src/main.js"
   },
   "version": "1.0.0",
+  "engines": {
+    "node": ">=18.0.0 <19.0.0"
+  },
   "dependencies": {
     "@google-cloud/local-auth": "2.1.0",
     "dotenv": "^16.3.1",
