--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
     "start": "node src/main.js"
   },
   "version": "1.0.0",
-  "engines": {
-    "node": ">=18.0.0 <19.0.0"
-  },
   "dependencies": {
     "@google-cloud/local-auth": "2.1.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "googleapis": "^126.0.1",
     "grammy": "^1.19.0",
     "node-cron": "^3.0.2",
@@ -18,6 +16,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
     "@types/node-cron": "^3.0.9"
   }
